fix: missing table extraction from WITH body causes semantic models to be skipped